--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,3 @@
-/*
-=============== 
-Variables
-===============
-*/
-
-:root {
-  /* dark shades of primary color*/
-
-  --clr-primary-1: hsl(205, 86%, 17%);
-  --clr-primary-2: hsl(205, 77%, 27%);
-  --clr-primary-3: hsl(205, 72%, 37%);
-  --clr-primary-4: hsl(205, 63%, 48%);
-  /* primary/main color */
-  --clr-primary-5: hsl(205, 78%, 60%);
-  /* lighter shades of primary color */
-  --clr-primary-6: hsl(205, 89%, 70%);
-  --clr-primary-7: hsl(205, 90%, 76%);
-  --clr-primary-8: hsl(205, 86%, 81%);
-  --clr-primary-9: hsl(205, 90%, 88%);
-  --clr-primary-10: hsl(205, 100%, 96%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
-  --clr-white: #fff;
-  --clr-red-dark: hsl(360, 67%, 44%);
-  --clr-red-light: hsl(360, 71%, 66%);
-  --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: hsl(125, 71%, 66%);
-  --clr-black: #222;
-  --transition: all 0.3s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  --max-width: 1170px;
-  --fixed-width: 620px;
-}
-/*
-=============== 
-Global Styles
-===============
-*/
-
-*,
 ::after,
 ::before {
   margin: 0;
@@ -61,8 +7,8 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
+  background: hsl(210, 36%, 96%);
+  color: hsl(209, 61%, 16%);
   line-height: 1.5;
   font-size: 0.875rem;
 }
@@ -76,7 +22,6 @@ h1,
 h2,
 h3,
 h4 {
-  letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
   margin-bottom: 0.75rem;
@@ -95,7 +40,7 @@ h4 {
 }
 p {
   margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
+  color: hsl(210, 22%, 49%);
 }
 @media screen and (min-width: 800px) {
   h1 {
@@ -123,20 +68,18 @@ p {
 .btn {
   text-transform: uppercase;
   background: transparent;
-  color: var(--clr-black);
+  color: #222;
   padding: 0.375rem 0.75rem;
-  letter-spacing: var(--spacing);
   display: inline-block;
-  transition: var(--transition);
+  transition: all 0.3s linear;
   font-size: 0.875rem;
-  border: 2px solid var(--clr-black);
+  border: 2px solid #222;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: var(--radius);
 }
 .btn:hover {
-  color: var(--clr-white);
-  background: var(--clr-black);
+  color: white;
+  background: #222;
 }
 /* section */
 .section {
@@ -146,7 +89,6 @@ p {
 .section-center {
   width: 90vw;
   margin: 0 auto;
-  max-width: 35rem;
   margin-top: 8rem;
 }
 @media screen and (min-width: 992px) {
@@ -161,14 +103,13 @@ main {
 }
 
 .section-center {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-  box-shadow: var(--light-shadow);
-  transition: var(--transition);
+  background: white;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s linear;
   padding: 2rem;
 }
 .section-center:hover {
-  box-shadow: var(--dark-shadow);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 .alert {
   margin-bottom: 1rem;
@@ -177,14 +118,11 @@ main {
   align-items: center;
   text-align: center;
   font-size: 0.7rem;
-  border-radius: 0.25rem;
-  letter-spacing: var(--spacing);
   text-transform: capitalize;
 }
 
-
 .form h3 {
-  color: var(--clr-primary-1);
+  color: hsl(205, 86%, 17%);
   margin-bottom: 1.5rem;
   text-align: center;
 }
@@ -195,34 +133,28 @@ main {
 .input {
   padding: 0.25rem;
   padding-left: 1rem;
-  background: var(--clr-grey-10);
-  border-top-left-radius: var(--radius);
-  border-bottom-left-radius: var(--radius);
+  background: hsl(210, 36%, 96%);
   border-color: transparent;
   font-size: 1rem;
   flex: 1 0 auto;
-  color: var(--clr-grey-5);
+  color: hsl(210, 22%, 49%);
 }
-
 .submit-btn {
-  background: var(--clr-primary-8);
+  background: hsl(205, 86%, 81%);
   border-color: transparent;
   flex: 0 0 5rem;
   display: grid;
   align-items: center;
   padding: 0.25rem;
   text-transform: capitalize;
-  letter-spacing: 2px;
-  border-top-right-radius: var(--radius);
-  border-bottom-right-radius: var(--radius);
   cursor: pointer;
-  content: var(--clr-primary-5);
-  transition: var(--transition);
+  content: hsl(205, 78%, 60%);
+  transition: all 0.3s linear;
   font-size: 0.85rem;
 }
 .submit-btn:hover {
-  background: var(--clr-primary-5);
-  color: var(--clr-white);
+  background: hsl(205, 78%, 60%);
+  color: white;
 }
 
 .container {
@@ -234,23 +166,21 @@ main {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5rem;
-  transition: var(--transition);
+  transition: all 0.3s linear;
   padding: 0.25rem 1rem;
-  border-radius: var(--radius);
   text-transform: capitalize;
 }
 .item:hover {
-  color: var(--clr-grey-5);
-  background: var(--clr-grey-10);
+  color: hsl(210, 22%, 49%);
+  background: hsl(210, 36%, 96%);
 }
 .item:hover .title {
-  color: var(--clr-grey-5);
+  color: hsl(210, 22%, 49%);
 }
 .title {
   margin-bottom: 0;
-  color: var(--clr-grey-1);
-  letter-spacing: 2px;
-  transition: var(--transition);
+  color: hsl(209, 61%, 16%);
+  transition: all 0.3s linear;
 }
 .edit-btn,
 .delete-btn {
@@ -259,19 +189,19 @@ main {
   cursor: pointer;
   font-size: 0.7rem;
   margin: 0 0.15rem;
-  transition: var(--transition);
+  transition: all 0.3s linear;
 }
 .edit-btn {
-  color: var(--clr-green);
+  color: green;
 }
 .edit-btn:hover {
-  color: var(--clr-green-dark);
+  color: hsl(125, 67%, 44%);
 }
 .delete-btn {
-  color: var(--clr-red-light);
+  color: hsl(360, 71%, 66%);
 }
 .delete-btn:hover {
-  color: var(--clr-red-dark);
+  color: hsl(360, 67%, 44%);
 }
 .clear-btn {
   text-transform: capitalize;
@@ -281,16 +211,14 @@ main {
   align-items: center;
   background: transparent;
   border-color: rgb(212, 162, 165);
-  color: var(--clr-red-light);
+  color: hsl(360, 71%, 66%);
   margin: 0 auto;
   font-size: 0.85rem;
-  letter-spacing: var(--spacing);
   cursor: pointer;
-  transition: var(--transition);
+  transition: all 0.3s linear;
   margin-top: 1.25rem;
- border-radius: var(--radius)
 }
 .clear-btn:hover {
-  color: var(--clr-red-dark);
+  color: hsl(360, 67%, 44%);
   background-color: rgb(229, 153, 153);
 }
