--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+:root {
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+*/
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
 ::after,
 ::before {
   margin: 0;
@@ -22,6 +34,7 @@ h1,
 h2,
 h3,
 h4 {
+  letter-spacing: 0.1rem;
   text-transform: capitalize;
   line-height: 1.25;
   margin-bottom: 0.75rem;
@@ -70,12 +83,14 @@ p {
   background: transparent;
   color: #222;
   padding: 0.375rem 0.75rem;
+  letter-spacing: 0.1rem;
   display: inline-block;
   transition: all 0.3s linear;
   font-size: 0.875rem;
   border: 2px solid #222;
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
 }
 .btn:hover {
   color: white;
@@ -89,6 +104,7 @@ p {
 .section-center {
   width: 90vw;
   margin: 0 auto;
+  max-width: 35rem;
   margin-top: 8rem;
 }
 @media screen and (min-width: 992px) {
@@ -104,6 +120,7 @@ main {
 
 .section-center {
   background: white;
+  border-radius: 0.25rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s linear;
   padding: 2rem;
@@ -118,6 +135,8 @@ main {
   align-items: center;
   text-align: center;
   font-size: 0.7rem;
+  border-radius: 0.25rem;
+  letter-spacing: 0.1rem;
   text-transform: capitalize;
 }
 
@@ -134,6 +153,8 @@ main {
   padding: 0.25rem;
   padding-left: 1rem;
   background: hsl(210, 36%, 96%);
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
   border-color: transparent;
   font-size: 1rem;
   flex: 1 0 auto;
@@ -147,6 +168,9 @@ main {
   align-items: center;
   padding: 0.25rem;
   text-transform: capitalize;
+  letter-spacing: 2px;
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
   cursor: pointer;
   content: hsl(205, 78%, 60%);
   transition: all 0.3s linear;
@@ -168,6 +192,7 @@ main {
   margin-bottom: 0.5rem;
   transition: all 0.3s linear;
   padding: 0.25rem 1rem;
+  border-radius: 0.25rem;
   text-transform: capitalize;
 }
 .item:hover {
@@ -180,6 +205,7 @@ main {
 .title {
   margin-bottom: 0;
   color: hsl(209, 61%, 16%);
+  letter-spacing: 2px;
   transition: all 0.3s linear;
 }
 .edit-btn,
@@ -214,11 +240,14 @@ main {
   color: hsl(360, 71%, 66%);
   margin: 0 auto;
   font-size: 0.85rem;
+  letter-spacing: 0.1rem;
   cursor: pointer;
   transition: all 0.3s linear;
   margin-top: 1.25rem;
+  border-radius: 0.25rem;
 }
 .clear-btn:hover {
+  color: var(--clr-red-dark);
   color: hsl(360, 67%, 44%);
   background-color: rgb(229, 153, 153);
 }
